--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,16 @@
             <version>3.7.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.2.12.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+            <version>2.3.7.RELEASE</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
